fix sidebar item count in dark mode

--- a/src/app/_shared-components/AppLayout/CollapsibleItem/CollapsibleItem.module.scss
+++ b/src/app/_shared-components/AppLayout/CollapsibleItem/CollapsibleItem.module.scss
@@ -11,7 +11,7 @@
 }
 
 .subItemCount {
-	@apply ml-auto flex size-4 items-center justify-center rounded-sm bg-gray-200 text-[10px] font-medium text-basic_text/80;
+	@apply ml-auto flex size-4 items-center justify-center rounded-sm bg-empty_bar_bg text-[10px] font-medium text-basic_text/80 dark:text-basic_text;
 }
 
 .sidebarActive {
